# Gregory

./: CMakeLists.txt  MainWindow.ui  README.md
src/: Event.cpp  Event.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
test/: test_Event.cpp
